# facebook-ads-scraper

./: .coverage  .gitignore  README.md  config.py  fb_ad_lib_scraper.py  pyproject.toml  run.py
.github/workflows/: ci.yml
examples/: example_usage.py
facebook-ad-library-scraper/: fb_ad_lib_scraper.py
src/facebook_ads_scraper/: __init__.py  __main__.py  cli.py  client.py  config.py  models.py
tests/: test_client.py  test_config.py  test_models.py
