[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "facebook-ads-scraper"
version = "0.2.0"
description = "Minimal Python scraper that pulls Facebook Ad Account ads (+ adset, campaign, creative) from the Graph Marketing API to JSON."
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [{ name = "Jan Alexandr Kopřiva", email = "jan.alexandr.kopriva@gmail.com" }]
keywords = ["facebook", "ads", "marketing-api", "scraper"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Internet :: WWW/HTTP",
]
dependencies = [
    "requests>=2.31.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "responses>=0.25",
    "ruff>=0.6",
]

[project.scripts]
fb-ads-scraper = "facebook_ads_scraper.cli:main"

[project.urls]
Homepage = "https://github.com/koprjaa/facebook-ads-scraper"
Repository = "https://github.com/koprjaa/facebook-ads-scraper"
Issues = "https://github.com/koprjaa/facebook-ads-scraper/issues"

[tool.hatch.build.targets.wheel]
packages = ["src/facebook_ads_scraper"]

[tool.ruff]
line-length = 110
target-version = "py310"

[tool.ruff.lint]
select = ["E", "W", "F", "I", "B", "UP", "N"]
ignore = ["E501"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
addopts = "-q --strict-markers"
